# networks-course

./: .clang-tidy  .gitmodules
lab01/: lab01.md
lab02/: lab02.md
lab02/rest-service/: CMakeLists.txt  main.cpp  server.cpp
lab02/rest-service/include/: product.h  server.h
lab03/: CMakeLists.txt  lab03.md  readme.md
lab03/src/: client.cpp  server.cpp
lab04/: CMakeLists.txt  lab04.md  readme.md
lab04/include/: serialize.hpp  uri.hpp
lab04/src/: proxy_server.cpp
lab05/: lab05.md  readme.md
lab05/broadcast-time/: Cargo.toml
lab05/broadcast-time/src/client/: main.rs
lab05/broadcast-time/src/server/: main.rs
lab05/remote-control/: Cargo.toml
lab05/remote-control/src/client/: main.rs
lab05/remote-control/src/server/: main.rs
lab05/smtp-client/: Cargo.toml
lab05/smtp-client/src/: main.rs
lab05/smtp-client/test/: test.html
lab06/: lab06.md
lab06/ftp-client/: Cargo.toml  readme.md
lab06/ftp-client/src/: main.rs
lab07/: lab07.md
lab07/echo/: Cargo.toml
lab07/echo/src/client/: main.rs
lab07/echo/src/server/: main.rs
lab08/: lab08.md
lab08/checksums/: Cargo.toml
lab08/checksums/src/: lib.rs
lab08/protocol/: Cargo.toml
lab08/protocol/src/: lib.rs
lab08/protocol/src/client/: main.rs
lab08/protocol/src/server/: main.rs
lab08/protocol/test/: test_file.txt
lab09/: lab09.md  readme.md
lab09/portscan/: Cargo.toml
lab09/portscan/src/: main.rs
lab10/: readme.md
lab10/icmp-ping/: Cargo.toml
lab10/icmp-ping/src/: main.rs
lab10/images/: lab10.md
lab11/: lab11.md
lab11/echo/: Cargo.toml
lab11/echo/src/client/: main.rs
lab11/echo/src/server/: main.rs
lab11/routing/src/: main.rs
lab12/: lab12.md
lab12/rip/: Cargo.toml
lab12/rip/src/: main.rs
lab13/: lab13.md
lab13/crc/: Cargo.toml  README.md
lab13/crc/src/: lib.rs
lab13/crc/test/: test.txt
lab14/: lab14.md  readme.md
lab14/rest-service/: Cargo.toml
lab14/rest-service/src/: main.rs
lab14/tests/: Lab14.postman_test_run.json  Lab14.postman_test_run_mail.json
